--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "example": "cd example && umi dev",
     "lint:es": "eslint --ext .js src mock tests",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
     "lint:fix": "tslint --fix \"src/**/*.ts\" \"src/**/*.tsx\"",
@@ -13,44 +14,41 @@
     "antd": "^3.19.5",
     "classnames": "^2.2.6",
     "draft-js": "^0.11.6",
+    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-react": "^7.10.4",
+    "@rollup/plugin-replace": "^2.3.3",
     "@types/classnames": "^2.2.9",
     "@types/draft-js": "^0.10.43",
     "@types/lodash": "^4.14.158",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-test-renderer": "^16.0.3",
-    "autoprefixer": "^9.8.6",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^9.0.0",
-    "css-loader": "^4.2.0",
     "eslint": "^5.4.0",
-    "eslint-config-umi": "^1.4.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "html-webpack-plugin": "^4.3.0",
     "less": "^3.12.2",
-    "less-loader": "^6.2.0",
-    "lint-staged": "^7.2.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "postcss-loader": "^3.0.0",
-    "react-test-renderer": "^16.7.0",
-    "style-loader": "^1.2.1",
-    "style-resources-loader": "^1.3.3",
-    "ts-loader": "^8.0.2",
+    "rollup": "^2.23.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^3.1.4",
+    "rollup-plugin-typescript2": "^0.27.2",
     "tslint": "^5.12.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0",
     "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "umi": "^3.2.14"
+  },
+  "peerDependencies": {
+    "immutable": "^4.0.0-rc.12",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.19",
+    "draft-js": "^0.11.6",
+    "react": "^16.13.1",
+    "antd": "^3.19.5"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
