--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "double-d-edito",
+  "name": "double-a-edito",
   "private": true,
   "version": "1.0.0",
   "main": "lib/editor.esm.js",
