--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "double-a-edito",
+  "name": "double-a-editor",
   "private": false,
   "version": "0.0.9",
   "main": "lib/editor.esm.js",
