--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rollup-plugin-postcss": "^3.1.4",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.27.2",
+    "rollup-pluginutils": "^2.8.2",
     "tslint": "^5.12.0",
     "typescript": "^3.9.7",
     "umi": "^3.2.14"
